# rust-api-template

./: Cargo.toml
src/: config.rs  main.rs
src/config/: env_keys.rs
src/routes/: health.rs
