[package]
name = "template"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full"]}
tower = "0.5.1"
tower-http = {version = "0.6.2", features = ["trace", "request-id"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
